continue practicing ajax requests (axios, rest-api, promises)

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
       -->
+      <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+  <script>
+    // console.log(1);
+    // function getSmth(){
+    //   return $.ajax('https://social-network.samuraijs.com/api/1.0/users');
+    // }
+    // (function showServerResponse(){
+    //   const promise = getSmth();
+    //   promise.then( response => console.log(`jQuery response: ${response.items[7].name}`));
+    // })();
+    // const getSmthAxios = () => {
+    //   return axios.get('https://social-network.samuraijs.com/api/1.0/users').then(response => response.data);
+    // }
+    // (function showServerResponseAxios(promise = getSmthAxios()){
+    //   // const promise = getSmthAxios();
+    //   promise.then( response => response.items.forEach(el => console.log(el)) );
+    // })();
+    // setTimeout(() => {console.log(3)}, 400);
+    // console.log(4);
+  </script>
 </body>
 
 </html>
