--- a/public/index.html
+++ b/public/index.html
@@ -105,15 +105,18 @@
     // };
     //  // --------------GET Axios with query params and click event to display result (promise -> response.data)
     // const getTasksFromServer = () => {
-    //   return axios.get('https://repetitora.net/api/JS/Tasks?widgetId=8654353').then(response => response.data);
+    //   const promise = axios.get('https://repetitora.net/api/JS/Tasks?widgetId=8654353').then(response => response.data);
+    //   promise.then(response => console.log(response));
+    //   return promise;
     // }
-    // (function displayTasks(promise = getTasksFromServer()) {
+    // (function displayTasks() {
     //   let input = document.createElement('input');
     //       input.type = 'Submit';
     //       input.value = 'Get tasks';
     //       input.addEventListener('click', getTasks);
     //   document.body.appendChild(input);
     //   function getTasks() {
+    //     let promise = getTasksFromServer();
     //     promise.then( response => console.log(response));
     //     let elements = document.querySelectorAll('.task');
     //     if (elements.length !== 0){
@@ -169,21 +172,21 @@
     //   const getIdInput = document.createElement('input');
     //       getIdInput.type = 'text';
     //       getIdInput.placeholder = 'Please, type the task id...';
-    //       getIdInput.id = 'task-id';
+    //       getIdInput.id = 'task-id-up';
     //       document.body.appendChild(getIdInput);
 
     //   const getTextInput = document.createElement('input');
     //       getTextInput.type = 'text';
     //       getTextInput.placeholder = 'Please, type the task text...';
-    //       getTextInput.id = 'task-text';
+    //       getTextInput.id = 'task-text-up';
     //       document.body.appendChild(getTextInput);
 
     //       input.addEventListener('click', changeTaskToDAL);
     // })();
 
     // function changeTaskToDAL() {
-    //   const id = document.getElementById('task-id').value,
-    //         title = document.getElementById('task-text').value;
+    //   const id = document.getElementById('task-id-up').value,
+    //         title = document.getElementById('task-text-up').value;
     //   changeTaskTextOnServer(id, title);
     // }
   </script>
